Fix Select widget value text overflow

--- a/src/core/select/select.module.scss
+++ b/src/core/select/select.module.scss
@@ -84,6 +84,8 @@
 .value {
   flex: 1;
   cursor: default;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .input:placeholder-shown {
@@ -203,8 +205,11 @@
 .tag {
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .badge {
   padding: 0.375rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
